# ardeck-plugin-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  builder.bat
lib/: cargo.toml
lib/src/: ardeck_plugin.rs  lib.rs  logger.rs  manifest.rs
plugin/: Cargo.toml  LICENSE  actions.json  build.bat
plugin/src/: main.rs
src/: client.rs  main.rs
src/client/: ardeck_plugin.rs  env_args.rs  websocket.rs
