[package]
name = "ardeck-plugin-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "*"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
