[package]
authors = ["project-ardeck"]
name = "ardeck-plugin-sdk-rs"
version = "0.0.1-alpha"
edition = "2021"

[workspace]
members = ["lib", "plugin"]

[[bin]]
name = "plugin"
path = "plugin/src/main.rs"

[dependencies]
lib_plugin = { path = "lib" }
tokio = { version = "1.42.0", features = ["full"] }
